--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
             </ul>
-            
+           <div id="acessibilida" class="menu-acessibilidade">
         </nav>
        
     </header>
