--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
             </ul>
            <div id="acessibilida" class="menu-acessibilidade">
-            <button >menu-acessibilidade</button>
+            <button >acessibilidade</button>
         </nav>
        
     </header>
